[build-system]
requires  =  ["setuptools"]
build-backend  =  "setuptools.build_meta"

[project]
name = "TgEntity"
version = "0.1.0"
description = "Telegram entity parser"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "KumaTea", email = "mail@kmtea.eu"}
]
maintainers = [
    {name = "KumaTea", email = "mail@kmtea.eu"}
]
keywords = ["telegram", "entity", "entities", "parser", "html", "markdown", "v2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/KumaTea"
Repository = "https://github.com/KumaTea/tgentity"
